--- a/product.html
+++ b/product.html
@@ -56,6 +56,13 @@
       
 
          <button style="background-color: rgb(95, 187, 98)" color="white">Submit</button>
+         <br><br>
+
+         <marquee direction="right"behavior="scroll" height="50px" style="background-color: burlywood">
+      
+             <h4>&#169;   ghadgeakash438@gmail.com // MO: 9356977531,8483820279 </h4>
+    </marquee>
+
    
 
 
