--- a/services.html
+++ b/services.html
@@ -36,5 +36,10 @@
     <li>instagram follow 10% discount</li>
 
 </ul>
+
+<marquee direction="right"behavior="scroll" height="50px" style="background-color: burlywood">
+      
+             <h4>&#169;   ghadgeakash438@gmail.com // MO: 9356977531,8483820279 </h4>
+    </marquee>
 </body>
 </html>
