--- a/contact.html
+++ b/contact.html
@@ -31,5 +31,10 @@
       </from>
     </fieldset>
 
+    <marquee direction="right"behavior="scroll" height="50px" style="background-color: burlywood">
+      
+             <h4>&#169;   ghadgeakash438@gmail.com // MO: 9356977531,8483820279 </h4>
+    </marquee>
+
 </body>
 </html>
