--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </nav>     
    </header><br><br>
      <fieldset>
-      <legend style="text-align: center">Contact</legend>
+      <legend style="text-align: center">'ur requirement'</legend>
       <from action method="post">
         <label>First Name:</label>
         <input type="text" placeholder="First Name" /><br><br>
@@ -29,9 +29,10 @@
         <textarea rows="2" cols="30" placeholder="comment"></textarea><br><br> 
         <input style="background-color: rgb(52, 141, 70);" type="submit" />
       </from>
-    </fieldset>
+    </fieldset><br>
+     <iframe style="text-align: center" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d60487.58386896756!2d73.75271692047227!3d18.642714343097992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9a553c3d1a1%3A0x9b9e947631e09188!2sChinchwad%2C%20Pimpri-Chinchwad%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1754033606245!5m2!1sen!2sin" width="400px" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    <marquee direction="right"behavior="scroll" height="50px" style="background-color: burlywood">
+    <marquee direction="right"behavior="scroll" height="50px" style="background-color: gray">
       
              <h4>&#169;   ghadgeakash438@gmail.com // MO: 9356977531,8483820279 </h4>
     </marquee>
