--- a/product.html
+++ b/product.html
@@ -38,6 +38,7 @@
         <select>
           <option> Select</option>
           <option>Full-Rim Frame</option>
+          <option>Photo Frames </option>
           <option>Rimless Frame</option>
           <option>Round Frame</option>
           <option>Cat-Eye Frame</option>
@@ -58,7 +59,7 @@
          <button style="background-color: rgb(95, 187, 98)" color="white">Submit</button>
          <br><br>
 
-         <marquee direction="right"behavior="scroll" height="50px" style="background-color: burlywood">
+         <marquee direction="right"behavior="scroll" height="50px" style="background-color: gray">
       
              <h4>&#169;   ghadgeakash438@gmail.com // MO: 9356977531,8483820279 </h4>
     </marquee>
