--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
 
 </ul>
 
-<marquee direction="right"behavior="scroll" height="50px" style="background-color: burlywood">
+<marquee direction="right"behavior="scroll" height="50px" style="background-color: gray">
       
              <h4>&#169;   ghadgeakash438@gmail.com // MO: 9356977531,8483820279 </h4>
     </marquee>
