change contact name

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </nav>     
    </header><br><br>
      <fieldset>
-      <legend style="text-align: center">'ur requirement'</legend>
+      <legend style="text-align: center">Contact</legend>
       <from action method="post">
         <label>First Name:</label>
         <input type="text" placeholder="First Name" /><br><br>
