--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <label>Last Name:</label>
         <input type="text" placeholder="Last Name" /><br><br>
         <label>Phone No:</label>
-        <input type="number" placeholder="Ph number" /><br><br>
+        <input type="number" placeholder="phone number" /><br><br>
         <label>Address :</label>
         <input type="text" placeholder="address" /><br><br>
         <textarea rows="2" cols="30" placeholder="comment"></textarea><br><br> 
