normal change color

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <a href="contact.html">Contact</a>
     </nav>     
    </header><br><br>   
-             <h2 style="color: orange">EliteEdge Framing</h2>
+             <h2 style="color: crimson">EliteEdge Framing</h2>
 
              <p>
            <strong> Shop Name :- </strong><u>EliteEdge Framing</u><br>
