--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
    
     <title>Index-Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body><header>
     <nav style="text-align: center" length="400px">
